--- a/culture-en.html
+++ b/culture-en.html
@@ -43,8 +43,7 @@
 	left: 15% !important;
 }
 .section1 .text-box{
-	text-align: right;
-	margin-left: 100px;
+	text-align: left;
 }
 .section2{
 	margin-top: 20px;
@@ -53,7 +52,7 @@
 	position: relative;
 }
 .section2 .cont1{
-	font-size: 24px;
+	font-size: 20px;
 }
 .section2 .cont1 font{
 	font-weight: 600;
@@ -71,7 +70,7 @@
 	left: 25%;
 }
 .section2 .content2>div{
-	right: 25%;
+	right: 10%;
 }
 .section2 .content2 {
 	text-align: right;
@@ -120,6 +119,17 @@
 	bottom: -22px;
     width: 30px;
 }
+.section3 .item-box1 .my-all-center{
+	width: 100%;
+	text-align: center;
+	padding-right: 30px;
+	font-size: 20px;
+}
+.section3 .item-box6 .my-all-center{
+	width: 100%;
+	text-align: center;
+	font-size: 20px;
+}
 .section3 .text-box{
 	position: absolute;
     bottom: 0;
@@ -163,6 +173,10 @@
 	width: 49.8%;
 	position: relative;
 }
+.section4 .item1 .cont{
+	width: 100%;
+	text-align: center;
+}
 .section4 .item-box .bg-img{
 	width: 100%;
 }
@@ -187,7 +201,8 @@
     position: absolute;
     left: 44%;
     top: 0;
-	font-size: 14px;
+	font-size: 13px;
+	line-height: 16px;
 	transition: 1s ease-in-out;
 }
 .section4 .item2 .cont2>div{
@@ -250,16 +265,19 @@
 	padding: 0 5%;
 }
 .section6 .content{
-	width: 38%;
-	padding: 40px 0;
+	width: 40%;
+	padding: 20px 0;
 }
 .section6 .content3{
-	margin-top: 50px;
+	margin-top: 30px;
 }
 .section6 .content .cont1{
 	font-size: 16px;
 	font-weight: 600;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
+}
+.section6 .content .cont2{
+	line-height: 20px;
 }
 .section6 .content3 .cont1{
 	font-weight: 500;
@@ -357,8 +375,8 @@
 		<div class="content-box">
 			<div class="content text-center wow fadeInLeft animated">
 				<h2 class="text-box">
-					<div class="my-color2">幸福</div>
-					<font class="my-color5" style="font-weight: 600">是奋斗出来的</font>
+					<div class="my-color2">Happiness</div>
+					<font class="my-color5" style="font-weight: 600">comes from struggle</font>
 				</h2>
 			</div>
 		</div>
@@ -369,8 +387,8 @@
 				<img src="images/culture/2-1.jpg">
 				<div class="my-column-center">
 					<div class="wow fadeInRight">
-						<span class="cont1 font1"><font>幸福家文化</font></span>
-						<div class="cont2">土壤</div>
+						<span class="cont1 font1"><font>Happy Family Culture</font></span>
+						<div class="cont2">Soil</div>
 					</div>
 				</div>
 			</div>
@@ -378,8 +396,8 @@
 				<img src="images/culture/2-2.jpg">
 				<div class="my-column-center" style="margin-left: 30px">
 					<div class=" wow fadeInRight ani-time3">
-						<span class="cont1">同创共享的<font class="font1">奋斗者文化</font></span>
-						<div class="cont2">根基</div>
+						<span class="cont1">create and share<font> together-striver culture</font></span>
+						<div class="cont2">Foundation</div>
 					</div>
 				</div>
 			</div>
@@ -401,8 +419,8 @@
 	</section>
 	<section class="welcome-section section3 my-color1" data-item="3" style=" padding:0px;margin-top:20px">
 		<div class="row clearfix">
-			<div class="item-box my-color5" style="width: 20%">
-				<div class="my-all-center font1">文化项目</div>
+			<div class="item-box item-box1 my-color5" style="width: 20%">
+				<div class="my-all-center font1">Cultural project</div>
 				<img class="my-column-center icon1" src="images/culture/icon1.png">
 			</div>
 			<div class="item-box boxs" style="width: 40%">
@@ -411,11 +429,11 @@
 				<div class="content-box my-bg-color5 animated">
 					<div class="text-box">
 						<div class="title-text">
-							<span>春节联欢晚会</span>
+							<span>Spring Festival Gala Evening</span>
 							<span class="time"> 每年1~2月</span>
 						</div>
-						<div class="cont-text">在CQYFAS，春节联欢晚会是一年一度最隆重的盛会。那是一个属于“艾小渝”自己的舞台，每年春晚主题都应景走心，
-								所有节目都是重庆延锋安道拓人根据时下流行的元素自编自导共同出品，齐心打造的视听盛宴。
+						<div class="cont-text">At Chongqing Yanfeng Adient ，the Spring Festival is an annual event .It’s the stage that belongs to “Aixiaoyu,”every year, the theme of the Spring Festival gala all goes according to the occasion ,
+							 all the programs are produced by Chongqing Yanfeng Adient group according to the popular elements and make uo the audio-visual feast.
 						</div>
 					</div>
 					
@@ -427,11 +445,12 @@
 				<div class="content-box my-bg-color5 animated">
 					<div class="text-box">
 						<div class="title-text">
-							<span>家属日</span>
+							<span>Family Week</span>
 							<span class="time"> 每年11月1日</span>
 						</div>
-						<div class="cont-text">我们在每年的11月1日通过举办特色活动的形式邀请员工家属参与其中，从而感受延锋安道拓一直倡导的幸福家文化，为此我们称之为“家属日”。
-								从传统观念来看，（1+1）+1代表，其中1+1代表一个家庭的两位主体成员，剩下的1位代表孩子。因此我们将每年11月1日确定为家属日。							
+						<div class="cont-text">We invite the family member of employees to participate in the special activities on November 1st of each year, so as to feel the happy family culture that Chongqing Yanfeng Adient always advocates.
+							 Therefore, we call it “family day”. In the traditional sense, (1+1)+1 represents, 1+1 represents the two main members of the family, and the remaining 1 represents the child.
+							 So we set November 1st  as parents’ day every year.
 						</div>
 					</div>
 				</div>
@@ -442,11 +461,11 @@
 				<div class="content-box my-bg-color5 animated">
 					<div class="text-box">
 						<div class="title-text">
-							<span>团队集会 </span>
+							<span>Team Rally </span>
 							<span class="time">  每年7月</span>
 						</div>
-						<div class="cont-text">自1996年开始，CQYFAS各工厂由员工组成团队参赛，在团队集会的舞台上通过表演、舞蹈等多种形式展示公司最新的持续改进结果。
-							该活动每年7月在重庆延锋安道拓各工厂内部比赛，下半年则举行中国区和亚太区比赛。
+						<div class="cont-text">Since 1996, Chongqing Yanfeng Adient factories have organized teams of employees to participate in the competition, and the latest continuous improvement results of Chongqing Yanfeng Adient are presented through performances,
+							 dances and other forms on the stage of team gatherings. This activity will be held in July every year in Chongqing Yanfeng Adient plant internal competition, the second half of the year will be held in China and the Asia-pacific region competition. 
 						</div>
 					</div>
 				</div>
@@ -456,24 +475,17 @@
 				<div class="item item2"><img src="images/culture/3-8.jpg"></div>
 				<div class="content-box my-bg-color5 animated">
 					<div class="text-box">
-						<!-- <div class="title-text">
-							<span>愿景周</span>
-							<span class="time"> 每年6月</span>
-						</div>
-						<div class="cont-text">2000年以来，CQYFAS每年推出一个主题。每年6月，通过长达一周时间的各种活动向员工更进一步阐释重庆延锋安道拓的价值观、愿景，
-							旨在加强员工对公司取得持续成功至关重要因素的认知和理解。为此我们称为“愿景周”。
-						</div> -->
 						<div class="title-text">
-								<span>星耀盛典</span>
+								<span>Award Ceremony</span>
 							</div>
-							<div class="cont-text">从2015年开始，重庆延锋安道拓开始举办独立的年度奖项颁奖典礼。
-								我们鼓励个人、团队积极推选符合奖项的 候选人，号召艾小渝们不断探索真知、追求卓越。
+							<div class="cont-text">Since 2015, Chongqing Yanfeng Adient has been holding an independent annual award ceremony in Chongqing.
+								 We encourage everyone and the team to actively select candidates for the awards ,and call on Aixiaoyu to continuously explore knowledge and pursue excellence. 
 							</div>
 					</div>
 				</div>
 			</div>
-			<div class="item-box my-color5" style="width: 20%">
-				<div class="my-all-center font1">文化的力量</div>
+			<div class="item-box item-box6 my-color5" style="width: 20%">
+				<div class="my-all-center font1">The Power of Culture</div>
 				<img class="my-row-center icon2" src="images/culture/icon2.png">
 			</div>
 		</div>
@@ -481,12 +493,12 @@
     <section class="welcome-section section4 my-color1" data-item="4" style="padding:0px;margin-top:20px">
 		<img src="images/culture/4-1.jpg">	
 		<div class="content-box">
-			<h2 class="wow fadeInLeft">做企业<font class="my-color2">就是做文化</font></h2>
+			<h2 class="wow fadeInLeft">To be an enterprise<font class="my-color2"> is to be a culture.</font></h2>
 			<div class="content">
 				<div class="item-box item1">
 					<a href="video/whll.mp4" class="lightbox-image play-box">
 						<img class="bg-img" src="images/culture/4-2.jpg">
-						<div class="my-all-center my-color2" style="margin-top: -60px;font-size:18px">此片献给正在为梦想而奋斗的您</div>
+						<div class="my-all-center my-color2 cont" style="margin-top: -60px;font-size:18px">This video is dedicated to you who are fighting for your dream. </div>
 						<img class="my-all-center icon-play" src="images/icons/play.png">
 					</a>
 				</div>
@@ -494,16 +506,12 @@
 					<img class="bg-img" src="images/culture/4-3.jpg">
 					<div class="animated-text cont2 text-box animated wow fadeInRight">
 						<div>
-							<div>《文化的力量》献给亲爱的伙伴,学习传承,奔向未来;</div>
-							<div>《文化的力量》献给出色的同行,交流分享,一路向前;</div>
-							<div>《文化的力量》献给尊敬的朋友,投砾引珠,广征博引;</div>
-							<div>《文化的力量》献给我们的下一代,回馈社会,助力公益。</div>
+							<div>The power of culture is dedicated to our dear friends, learning and inheriting, and heading for the future.</div>
+							<div> The power of culture is dedicated to outstanding peers, sharing and moving foward.</div>
+							<div>The power of culture is dedicated to our esteemed friends, cast gravel led pearl, quote and prove fully.</div>
+							<div>The power of culture is dedicated to our next generation, to give back to society and to help the public good.</div>
 							<div style="margin-top: 15px;text-indent: 2em;padding-left: 5px;
-							text-align: justify;">此书由重庆延锋安道拓公司所有同仁,用血浓于水的感情共同写就。
-								这是一个企业对自己的锤炼,更是一群骨子里永远都热血的人,
-								为共同走过的时光、彼此见证的过往,亲手打造的一份弥足珍贵的成长纪念。
-								第一版印刷的4000册将进行爱心认购,所得款项全部进入蓝天基金。
-								用来支持环境的可持续发展,社会服务,教育事业等公益之举!
+							text-align: justify;">This book by Chongqing Yanfeng Adient company all colleagues with the feelings of blood is thicker than water . This is the temper of an enterprise on itself, but also a group of people who will always have blood in their bones, and the past they have witnessed , a precious memorial for growth created by themselves. The 4,000 copies of the first volume will be donated to the blue sky fund to support environmental sustainability, social services, and education!
 							</div> 
 						</div>
 					</div>
@@ -525,19 +533,12 @@
 		</div>
 		<div class="content content2 my-column-center">
 			<div class="wow fadeInRight ani-time3">
-				<div class="cont1">社会责任</div>
+				<div class="cont1">Social responsibility</div>
 				<div class="cont2">
-					<div class="cont-text1">在重庆延锋安道拓（CQYFAS）,我们对成功的定义并不仅限于财务成功，
-							我们更加关怀环境保护和社会责任。因此，基于环保、社区责任和员工领导力三重底线的蓝天计划应运而生。
+					<div class="cont-text1">At Chongqing Yanfeng Adient , our definition of success is not limited to financial success, we care more about environmental protection and social responsibility. Therefore, the blue sky plan based on the triple bottom line of environmental protection,
+						 community responsibility and employee leadership came into being.
 					</div>
 					<div class="cont-text2">
-						<!--<div >· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·</div>
-						<div >------------------------------------------------------------------------------------------------------------------------ </div>
-						
-						<div >________________________________________________________________________________________________________________________</div>
-						<div >________________________________________________________________________________________________________________________</div>
-						<div >________________________________________________________________________________________________________________________ </div>
-						-->
 					</div>
 				</div>
 			</div>
@@ -549,25 +550,25 @@
 		<div class="bg bg2 wow fadeInRightRotate ani-time2"></div>
 		<div class="content-box">
 			<div class="content content1 wow fadeInLeft ani-time2">
-				<div class="cont1 my-color2">蓝天基金</div>
-				<div class="cont2">公司于2014年正式成立了蓝天基金，并首次在当年春晚为蓝天基金注入131400元。
-					蓝天基金将用于支撑每年度的蓝天计划，为蓝天计划各项活动提供资金支持，以及帮扶企业内部困难职工。
-					截至2018年10月，蓝天基金累计帮扶金额超过90万元。
+				<div class="cont1 my-color2">The blue sky fund</div>
+				<div class="cont2">The company officially established the blue sky fund in 2014, and for the first time in that year’s Spring Festival gala to inject 131,400 yuan into the blue sky fund.
+					 The blue sky fund will be used to support the blue sky project every year, to provide financial support for the activities of the blue sky project, as well as to help employees in need within the enterprise.
+					 As of October 2018, the blue sky fund has helped more than 900,000 yuan.
 				</div>
 			</div>
 			<div class="content contents wow fadeInRight ani-time2">
 				<div class="content2">
-					<div class="cont1 my-color2">蓝天计划</div>
-					<div class="cont2">蓝天计划是一项全球性员工激励计划，旨在鼓励重庆延锋安道拓员工组成志愿者小组，
-						与当地公益性组织或学校合作以支持环境的可持续发展，社会服务，教育事业，公司员工组成3至100人
-						不等的志愿者项目团队，并与其选定的公益性组织或学校开展志愿者项目。
+					<div class="cont1 my-color2">The blue sky project</div>
+					<div class="cont2">The blue sky project is a global employee incentive plan, designed to encourage Chongqing Yanfeng Adient to form volunteer teams,
+						 cooperation with local public welfare organization or school to support the sustainable development of environment , social services, education career,
+						  the company employees of volunteers from 3 to 100 people in the project team, and with the selected project of the volunteer public welfare organization or school.
 					</div>
 				</div>
 				<div class="content3">
-					<div class="cont1 my-color2">开展蓝天计划的意义</div>
-					<div class="cont2">当地社区受益于志愿者的参与，我们也能从不断提高的领导经验和员工团队建设中
-						获益匪浅。重庆延锋安道拓的社会责任项目表面公司对于实现最高标准绩效、团队合作、包容性、领导力及成长的承诺。
-						公司支持员工加入全球的自愿行动，并且珍视员工为社区所做的重要贡献。
+					<div class="cont1 my-color2">The significance of the blue sky project</div>
+					<div class="cont2">The local community benefits from volunteer participation, and we can benefit from improved leadership and team building.
+						 CQYFAS ’s social responsibility project shows the company’s commitment to achieving the highest standards of performance , teamwork,
+						  inclusiveness, leadership and growth. The company supports its employees’ participation in voluntary global initiatives and values the important contributions they make to the company.  
 					</div>
 				</div>
 			</div>
@@ -575,18 +576,19 @@
 	</section>
 	<section class="welcome-section section7" data-item="7" style="padding:0px;margin-top:20px">
 		<div class="text-box wow fadeInDown100">
-			<div class="cont1 my-color5">系列特色蓝天计划活动</div>
-			<div class="cont2">重庆延锋安道拓一直持续不断践行蓝天计划，历年也沉淀下不少精品蓝天计划项目。</div>
+			<div class="cont1 my-color5">Series featured blue sky project activities</div>
+			<div class="cont2">Chongqing Yanfeng Adient has been continuously practicing the blue sky project,</div>
+			<div>many fine blue sky projects have been precipitated over the years.</div>
 		</div>
 		<div class="img-content wow fadeInUp100 ani-time2 my-color1">
 			<div class="item-box item1">
 				<img src="images/culture/7-1.jpg">
 				<div class="content-box my-bg-color5 animated">
 					<div class="my-all-center cont-box">
-						<div class="cont1">大学生领导力挑战赛</div>
+						<div class="cont1">College leadership challenge</div>
 						<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-							蓝天计划将学校作为目标社区开展以环保、大学生领导力为主题的系列校园活动。
-							通过一系列高质量、高要求的团队挑战，锻炼当代大学生的领导能力、培养社会责任意识、宣传环保理念。
+								The blue sky project takes the school as the target community to carry out a series of campus activities with the theme of environmental projection and college students’ leadership .Through a series of high-quality and demanding team challenges , the leadership ability of contemporary college students is exercised, the sense of social responsibility is cultivated ,
+								 and the environmental protection concept is publicized.
 						</marquee>
 					</div>
 				</div>
@@ -595,10 +597,10 @@
 				<img src="images/culture/7-2.jpg">
 				<div class="content-box my-bg-color5 animated">
 						<div class="my-all-center cont-box">
-							<div class="cont1">校企开放日</div>
+							<div class="cont1">School and enterprise Open day</div>
 							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-								我们邀请“大学生领导力挑战赛”获胜的所有队伍前往重庆延锋安道拓，
-								展示其获奖作品，参观公司及本地工厂，进行深入的校企参访交流。
+									We invite all the winning teams of the “college student leadership challenge”to go to Chongqing Yanfeng Adient , Chongqing to display their winning works ,visit the company and local factories,
+									 and conduct in-depth visits between the university and enterprises. 
 							</marquee>
 						</div>
 					</div>
@@ -607,10 +609,12 @@
 				<img src="images/culture/7-3.jpg">
 				<div class="content-box my-bg-color5 animated">
 						<div class="my-all-center cont-box">
-							<div class="cont1">为爱奔跑</div>
+							<div class="cont1">Run for love</div>
 							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-									“为爱奔跑”8 小时接力公益赛起源于2014 年，是一次用“公益、自助、环保”贯穿前期训练、活动筹备、比赛全程的赛事。
-									本次活动秉承着自愿捐赠的原则，最终您的每一步，公司捐助的每一笔赞助金，我们都将用于后期资助学校的修建和贫困小孩的帮扶等爱心活动。
+									”Run for love”8-hour relay public welfare race originated in 2014, it is an event that USES” public welfare,
+									 self-help and environmental protection” throughout the preliminary training , activity preparation and competition.
+									  This activity adheres to the principle of voluntary donation. In the end, every step you make and every sponsorship
+									   fund donated by the company will be used to fund the construction of schools and help poor children in the later stage.  
 							</marquee>
 						</div>
 					</div>
@@ -619,10 +623,12 @@
 				<img src="images/culture/7-4.jpg">
 				<div class="content-box my-bg-color5 animated">
 						<div class="my-all-center cont-box">
-							<div class="cont1">酉阳二中关爱助学</div>
+							<div class="cont1">Youyang no.2 middle school cares for students</div>
 							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-								杉树公益联合重庆延锋安道拓蓝天基金在重庆酉阳二中共同设立“杉树班”。2017年起延锋安道拓每年组建30人志愿者队伍，
-								为80位“双特”（特别贫困、特别优秀）生进行一对一帮扶，并为每位学生募捐三年生活费9000元，共计募捐72万元。
+									Shanshu public welfare and Chongqing Yanfeng Adient blue sky development fund jointly set us “shanshu class”
+									 In Chongqing Youyang no.2 middle school. Since 2017, Chongqing Yanfeng Adient has set up a volunteer team of
+									  30 people every year to help 80”shuangte”(especially poor and excellent)students one on one, and has raised 9,000yuan
+									   for each student’s living expenses for three years, a total of 720,000yuan has been raised.
 							</marquee>
 						</div>
 					</div>
@@ -631,9 +637,9 @@
 				<img src="images/culture/7-5.jpg">
 				<div class="content-box my-bg-color5 animated">
 						<div class="my-all-center cont-box">
-							<div class="cont1">工厂蓝天计划</div>
+							<div class="cont1">Factory blue sky project</div>
 							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
-								每年重庆延锋安道拓各分子公司均自行组织志愿者参与蓝天计划，积极投身于社会环保、助学帮扶等公益项目中。
+									Every year, each branch company of Chongqing Yanfeng Adient road in Chongqing organizes volunteers to participate in the blue sky project by themselves and actively participates in social environmental protection, student aid and other public welfare projects. 
 							</marquee>
 						</div>
 					</div>
@@ -642,7 +648,7 @@
 		</div>
 	</section>
 	<section id="magazine" class="welcome-section section8 my-color1" data-item="8" style=" padding:0px;margin-top:20px;">
-		<div class="title-text my-bg-color7">杂志《认知》</div>
+		<div class="title-text my-bg-color7">Magazine Cognition</div>
 		<div class="img-content wow fadeInLeft">
 			<div class="item-box item1 isClick" data-url="file/79.pdf"><img src="images/culture/8-1.jpg"></div>
 			<div class="item-box item2 isClick" data-url="file/80.pdf"><img src="images/culture/8-2.jpg"></div>
