--- a/index-en.html
+++ b/index-en.html
@@ -234,7 +234,7 @@
 					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
 					<div class="content-box">
 						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
-							<a href="product-en.html"><div class="point-text">整椅</div></a>
+							<a href="product-en.html"><div class="point-text">Seats</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 								<span class="small-point"></span>
@@ -242,7 +242,7 @@
 							</div>
 						</div>
 						<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
-							<a href="product-en.html"><div class="point-text">面套</div></a>
+							<a href="product-en.html"><div class="point-text">Trim</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 									<span class="small-point"></span>
@@ -255,7 +255,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<a href="product-en.html"><div class="point-text">骨架</div></a>
+							<a href="product-en.html"><div class="point-text">Frame</div></a>
 						</div>
 						<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
 							<div class="line">
@@ -263,7 +263,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<a href="product-en.html"><div class="point-text">泡沫</div></a>
+							<a href="product-en.html"><div class="point-text">Foam</div></a>
 						</div>
 					</div>
 				</div>
