--- a/news-detail.html
+++ b/news-detail.html
@@ -57,7 +57,7 @@
 	position: relative;
 }
 .content-box1{
-    text-align: center;
+    /* text-align: center; */
 }
 .content-box1 .item-box{
     width: 100%;
@@ -79,12 +79,15 @@
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
-    <section class="main-slider">
+    <!-- <section class="main-slider">
         <div class="main-slider-carousel owl-carousel owl-theme">
             <div class="slide">
 				<img src="images/news/banner.jpg">
 			</div>
         </div>
+    </section> -->
+    <section>
+        <img src="images/news/banner.jpg">
     </section>
     <!--End Main Slider-->
     <section class="news-content">
