--- a/news-en.html
+++ b/news-en.html
@@ -106,12 +106,15 @@
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
-    <section class="main-slider">
+    <!-- <section class="main-slider">
         <div class="main-slider-carousel owl-carousel owl-theme">
             <div class="slide">
 				<img src="images/news/banner.jpg">
 			</div>
         </div>
+    </section> -->
+    <section>
+        <img src="images/news/banner.jpg">
     </section>
     <!--End Main Slider-->
     <!--新闻列表-->
@@ -233,7 +236,7 @@
 <script src="my-js/news.js"></script>
 <script type="text/javascript">
     $('.news-list .item-box').click(function(){
-        window.location.href = 'news-detail.html';
+        window.location.href = 'news-detail-en.html';
     })
 </script>
 
