--- a/profession-en.html
+++ b/profession-en.html
@@ -58,7 +58,7 @@
 }
 .section1 .content{
 	position: absolute;
-    width: 45%;
+    width: 55%;
     right: 0;
     bottom: 20px;
     background-color: rgba(4,69,87,0.8);
@@ -451,8 +451,8 @@
 			<div class="cont1 my-color2 font7">Employer brand</div>
 			<div class="cont2 my-color2 font2">Ambitiousness<span>|</span>Never Stop<span>|</span>Work Together</div>
 			<div class="cont3">
-				<span>Practice:</span> For initiative，we strive to make breakthroughs and keep progress.<br>
-				<span>Initiative:</span> We are like-minded group ,for everyone joining here with the sane faith ,attitude and pursuit .
+				<span>Practice:</span> For initiative,we strive to make breakthroughs and keep progress.<br>
+				<span>Initiative:</span> We are like-minded group,for everyone joining here with the sane faith,attitude and pursuit.
 			</div>
 		</div>
 	</section>
