--- a/technology-en.html
+++ b/technology-en.html
@@ -188,7 +188,7 @@
 .slide3 .content1,
 .slide3 .content3{
 	height: 14%;
-	padding: 0 20px 0 10px;
+	padding: 0 0 0 5px;
 }
 .slide3 .content2{
 	height: 72%;
@@ -197,11 +197,13 @@
 	height: 100%;
 }
 .slide3 .content .cont1{
-	font-size: 18px;
+	font-size: 16px;
+	line-height: 16px;
 	font-weight: 600;
 }
 .slide3 .content .cont2{
-	line-height: 18px;
+	line-height: 14px;
+	font-size: 12px;
 }
 .slide3 .text-box{
 	border-left: 3px solid rgba(0,70,91,1);
@@ -224,7 +226,7 @@
 	position: relative;
 }
 .slide4 .content2{
-	width: 65%;
+	width: 75%;
 	height: 70%;
 	/* display: flex;
 	flex-direction: column; */
@@ -235,11 +237,12 @@
 	display: flex;
 	/* height: 50px; */
 	height: 10%;
-	font-size: 18px;
-    align-items: center;
+	font-size: 16px;
+	align-items: center;
+	justify-content: space-between;
 }
 .slide4 .nav-url>div{
-	margin-right: 60px;
+	/* margin-right: 20px; */
 }
 .slide4 .nav-url a{
 	color: #000;
@@ -259,10 +262,10 @@
 	height: 100%;
 }
 .slide4 .slide .cont1{
-	width: 60%;
+	width: 56%;
 }
 .slide4 .slide .cont2{
-	width:40%;
+	width:44%;
 	display: flex;
     flex-direction: column;
     justify-content: center;
@@ -306,7 +309,7 @@
 	display: flex;
     flex-direction: column;
 	justify-content: space-around;
-	left: 25%;
+	left: 18%;
 	padding: 15px 0;
 }
 .slide4 .content1 .conts1-2{
@@ -422,39 +425,39 @@
 					
 					<div class="content-box">
 						<div class="my-font1">Super seat</div>
-						<div style="margin-top:5px;">是重庆延锋安道拓自主研发的一款多功能</div>
-						<div>高端汽车商务座椅 。</div>
-						<div style="margin-top:10px;">我们从用户需求出发 ，还原不同座舱场景 ，</div>
-						<div>满足座舱休闲娱乐 、商务办公等多种需求 ，</div>
-						<div>带你感受智能 、便捷 、舒适的座椅新体验 。</div>
+						<div style="margin-top:5px;">is a multifunctional high-end car seat independently developed</div>
+						<div> by Chongqing Yanfeng Adient.</div>
+						<div style="margin-top:10px;">Starting from the users’ needs and the application scenario,</div>
+						<div>we aim to meet customer’s different needs of entertainment and work,</div>
+						<div>so as to bring you a new experience of smart, convenient and comfortable seats.</div>
 					</div>
 				</div>
 				<div class="right-box">
 					<div class="item-box">
 						<img src="images/technology/2-1.jpg">
-						<div class="content-box"><span>科技感十足的外观设计</span></div>
+						<div class="content-box"><span>Technologically sleek design</span></div>
 					</div>
 					<div class="item-box">
 						<img src="images/technology/2-2.jpg">
-						<div class="content-box"><span>流畅的智能APP控制</span></div>
+						<div class="content-box"><span>Smooth smart APP control</span></div>
 					</div>
 					<div class="item-box">
 						<img src="images/technology/2-3.jpg">
-						<div class="content-box"><span>便捷的手机无线充电</span></div>
+						<div class="content-box"><span>Convenient wireless phone charging</span></div>
 					</div>
 				</div>
 			</div>
 			<!--第3屏-->
 			<div class="swiper-slide slide3">
 				<div class="cont-title text-color1 animated" data-my-animate="fadeInDown">
-					<span>五大<font>智能</font>模块</span>
+					<span>Five<font> intelligent</font> modules</span>
 					<!-- <img src="images/technology/icon1.jpg"> -->
 				</div>
 				<div class="column-box column-5 my-color4">
 					<div class="item-box animated" data-my-animate="fadeInUp100">
 						<div class="content content1 text-box">
-							<div class="cont1 text-color1">迎宾模块</div>
-							<div class="cont2">当车门打开时，自动旋转45°，调整方便进出的方向。</div>
+							<div class="cont1 text-color1">Welcome module</div>
+							<div class="cont2">When the door is opened, it will automatically rotate 45° for easy entry</div>
 						</div>
 						<div class="content content2">
 							<img src="images/technology/3-1.jpg">
@@ -467,14 +470,14 @@
 								<img src="images/technology/3-2.jpg">
 							</div>
 						<div class="content content3 text-box">
-							<div class="cont1 text-color1">储物模块</div>
-							<div class="cont2">多项巧妙的储物设计，充满惊喜，为你的娱乐与办公提供更大的支持。</div>
+							<div class="cont1 text-color1">Storage Modules</div>
+							<div class="cont2">A number of ingenious storage designs provide greater support for your entertainment and mobile work.</div>
 						</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInUp100">
 						<div class="content content1 text-box">
-							<div class="cont1 text-color1">舒适模块</div>
-							<div class="cont2">搭载按摩、腰托、腿托、通风，根据身体情况自由调节，打造极致舒适。</div>
+							<div class="cont1 text-color1">Comfort module</div>
+							<div class="cont2">With massage, lumbar support, leg rest, ventilation, flexible to adjust to provide ultimate comfort.</div>
 						</div>
 						<div class="content content2">
 								<img src="images/technology/3-3.jpg">
@@ -487,14 +490,14 @@
 								<img src="images/technology/3-4.jpg">
 							</div>
 						<div class="content content3 text-box">
-							<div class="cont1 text-color1">多方位调节</div>
-							<div class="cont2">多向调节及座椅记忆功能，可实现45°及180°的双角度灵活旋转，在车内快速调节舒适位置。</div>
+							<div class="cont1 text-color1">Multi-directional adjustment</div>
+							<div class="cont2">Multi-directional adjustment and seat memory function, can realize 45° and 180° double-angle flexible rotation, and quickly adjust the comfortable position in the car.</div>
 						</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInUp100">
 						<div class="content content1 text-box">
-							<div class="cont1 text-color1">空气净化</div>
-							<div class="cont2">靠背安装空气净化器，实时监测车内空气，自动完成空气净化，在车内呼吸新鲜空气。</div>
+							<div class="cont1 text-color1">Air Purification</div>
+							<div class="cont2">The air purifier is installed on the backrest to monitor the real-time air inside the vehicle, automatically purify the air, so you can breathe fresh air in the car.</div>
 						</div>
 						<div class="content content2">
 								<img src="images/technology/3-5.jpg">
@@ -507,55 +510,55 @@
 			<div class="swiper-slide slide4">
 				<div class="content1">
 					<img src="images/background/bg-21.jpg" alt="">
-					<div class="content-box text-color4 animated" data-my-animate="fadeInDown100">
+					<div class="content-box text-color4" data-my-animate="fadeInDown100">
 						<div class="cont1 text-color2"><span>Technical </span> center</div>
-						<div class="my-font4">我们拥有完整的座椅设计开发能力，以技术创新支持业务运营</div>
+						<div class="my-font4">We have complete seat design development capabilities to support business operations with technological innovation.</div>
 						<div class="cont2 text-color4">
 							<span>></span>
-							<span>200+名工程师</span>
+							<span>200+ engineers</span>
 							<span>></span>
-							<span>10位座椅设计专家</span>
+							<span>10 seat design experts</span>
 							<span>></span>
-							<span>10年平均工作经验</span>
+							<span>10 years of average work experience</span>
 							<span>></span>
-							<span>5.8年平均座椅行业工作经验</span>
+							<span>5.8 years average seat industry work experience</span>
 						</div>
 					</div>
 				</div>
 				<div class="content2 main-slider my-color4">
 					<div class="nav-url">
-						<div><a class="active" href="#tech-item1">对标</a></div>
-						<div><a href="#tech-item2">工业造型</a></div>
+						<div><a class="active" href="#tech-item1">Benchmarking</a></div>
+						<div><a href="#tech-item2">Industrial Design</a></div>
 						<div><a href="#tech-item3">FEA</a></div>
-						<div><a href="#tech-item4">样件</a></div>
-						<div><a href="#tech-item5">实验</a></div>
-						<div><a href="#tech-item6">技术创新</a></div>
-						<div><a href="#tech-item7">工程运作</a></div>
+						<div><a href="#tech-item4">Prototype</a></div>
+						<div><a href="#tech-item5">Experiment</a></div>
+						<div><a href="#tech-item6">Technological innovation</a></div>
+						<div><a href="#tech-item7">Engineering operation</a></div>
 					</div>
 					<div class="tech-slider-carousel owl-carousel owl-theme">
 						<div class="slide" data-hash="tech-item1">
 							<div class="cont1"><img class="tech-slide-img" src="images/technology/5-1.jpg"></div>
 							<div class="cont2">
-								<div class="title">对标</div>
+								<div class="title">Benchmarking</div>
 								<div class="content">
-									<div>链接全球数据系统</div>
-									<div>专题分析</div>
-									<div>最佳业务实践</div>
-									<div>创新技术对标</div>
+									<div>Link Global Data System</div>
+									<div>Special Analysis</div>
+									<div>BBP</div>
+									<div>Innovation Technology Benchmarking</div>
 								</div>
 							</div>
 						</div>
 						<div class="slide" data-hash="tech-item2">
 							<div class="cont1"><img src="images/technology/5-2.jpg"></div>
 							<div class="cont2">
-								<div class="title">工业造型</div>
+								<div class="title">Industrial Design</div>
 								<div class="content">
-									<div>创意设计</div>
-									<div>表面设计</div>
-									<div>设计工程</div>
-									<div>色彩材质</div>
-									<div>精致工艺</div>
-									<div>趋势研究</div>
+									<div>Creative Design</div>
+									<div>Surface Design</div>
+									<div>Design Engineering</div>
+									<div>Color Materials</div>
+									<div>Craftsmanship</div>
+									<div>Trends</div>
 								</div>
 							</div>
 						</div>
@@ -564,64 +567,64 @@
 							<div class="cont2">
 								<div class="title">FEA</div>
 								<div class="content">
-									<div>数据模型</div>
-									<div>专题研究</div>
-									<div>仿真分析</div>
+									<div>Data Model</div>
+									<div>Special Study</div>
+									<div>Simulation Analysis</div>
 								</div>
 							</div>
 						</div>
 						<div class="slide" data-hash="tech-item4">
 							<div class="cont1"><img src="images/technology/5-4.jpg"></div>
 							<div class="cont2">
-								<div class="title">样件</div>
+								<div class="title">Prototype</div>
 								<div class="content">
-									<div>原型产品交付</div>
-									<div>设计验证</div>
+									<div>Prototype Product Delivery</div>
+									<div>Design Verification</div>
 									<div>精致工艺验证</div>
-									<div>制造可行性验证</div>
+									<div>Manufacturing Feasibility Verification</div>
 								</div>
 							</div>
 						</div>
 						<div class="slide" data-hash="tech-item5">
 							<div class="cont1"><img src="images/technology/5-5.jpg"></div>
 							<div class="cont2">
-								<div class="title">实验</div>
+								<div class="title">Experiment</div>
 								<div class="content">
-									<div>验证项目</div>
-									<div>实验的设计</div>
-									<div>验证数据分析</div>
+									<div>Verification</div>
+									<div>Experimental Design</div>
+									<div>Data Analysis</div>
 								</div>
 							</div>
 						</div>
 						<div class="slide" data-hash="tech-item6">
 							<div class="cont1"><img src="images/technology/5-6.jpg"></div>
 							<div class="cont2">
-								<div class="title">技术创新</div>
+								<div class="title">Technological innovation</div>
 								<div class="content">
-									<div>集成产品研发流程</div>
-									<div>用户体验研究</div>
-									<div>技术战略及路径图</div>
-									<div>创新文化</div>
+									<div>Integrated product development process</div>
+									<div>User experience research</div>
+									<div>Technology strategy and path map</div>
+									<div>Innovation culture</div>
 								</div>
 							</div>
 						</div>
 						<div class="slide" data-hash="tech-item7">
 							<div class="cont1"><img src="images/technology/5-7.jpg"></div>
 							<div class="cont2">
-								<div class="title">工程运作</div>
+								<div class="title">Engineering operation</div>
 								<div class="content">
-									<div>智能会议系统</div>
-									<div>全球产品生命周期管理系统</div>
-									<div>全球工程质量管理系统</div>
-									<div>工程知识管理系统</div>
+									<div>Intelligent Conference System</div>
+									<div>Global Product Lifecycle Management System</div>
+									<div>Global Engineering Quality Management System</div>
+									<div>Engineering Knowledge Management System</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="big-img-box">
+				<!-- <div class="big-img-box">
 					<img class="big-img" src="images/technology/6-8.jpg">
-				</div>
+				</div> -->
 			</div>
 			<!--第6屏-->
 			<div class="swiper-slide slide5">
@@ -630,41 +633,41 @@
 					<div>
 						<div class="conts">
 							<div class="cont1 text-color2 animated" data-my-animate="fadeInLeft"><span>Manufacturing</span> capacity</div>
-							<div class="cont2 text-color4 animated ani-time2" data-my-animate="fadeInLeft">我们拥有</div>
-							<div class="cont3 text-color2 animated ani-time2" data-my-animate="fadeInLeft">从汽车座椅零部件到整椅的各部分的生产制造能力</div>
+							<div class="cont2 text-color4 animated ani-time2" data-my-animate="fadeInLeft">We have</div>
+							<div class="cont3 text-color2 animated ani-time2" data-my-animate="fadeInLeft">manufacturing capabilities from parts to complete seats</div>
 						</div>
 						<div class="column-box column-4">
 							<div class="item-box animated" data-my-animate="fadeInLeft">
 								<img src="images/technology/6-1.jpg">
-								<div class="content-box box1">激光焊接</div>
+								<div class="content-box box1">Laser Welding</div>
 							</div>
 							<div class="item-box animated" data-my-animate="fadeInLeft">
 								<img src="images/technology/6-2.jpg">
-								<div class="content-box box1">连续模</div>
+								<div class="content-box box1">Progressive Die</div>
 							</div>
 							<div class="item-box animated" data-my-animate="fadeInLeft">
 								<img src="images/technology/6-3.jpg">
-								<div class="content-box box1">冲压串联线</div>
+								<div class="content-box box1">Stamping Line</div>
 							</div>
 							<div class="item-box animated" data-my-animate="fadeInLeft">
 								<img src="images/technology/6-4.jpg">
-								<div class="content-box box1">滑轨在线检测</div>
+								<div class="content-box box1">Track Online Test</div>
 							</div>
 							<div class="item-box animated" data-my-animate="fadeInRight">
 								<img src="images/technology/6-5.jpg">
-								<div class="content-box box1">浇注（泡沫）</div>
+								<div class="content-box box1">Pouring (foam)</div>
 							</div>
 							<div class="item-box animated" data-my-animate="fadeInRight">
 								<img src="images/technology/6-6.jpg">
-								<div class="content-box box1">自动裁剪</div>
+								<div class="content-box box1">Automatic Cutting</div>
 							</div>
 							<div class="item-box animated" data-my-animate="fadeInRight">
 								<img src="images/technology/6-7.jpg">
-								<div class="content-box box1">自动拧紧</div>
+								<div class="content-box box1">Automatic Screwing</div>
 							</div>
 							<div class="item-box animated" data-my-animate="fadeInRight">
 								<img src="images/technology/6-8.jpg">
-								<div class="content-box box1">工厂信息化</div>
+								<div class="content-box box1">Factory informationization</div>
 							</div>
 						</div>
 					</div>
