--- a/technology.html
+++ b/technology.html
@@ -619,9 +619,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="big-img-box">
+				<!-- <div class="big-img-box">
 					<img class="big-img" src="images/technology/6-8.jpg">
-				</div>
+				</div> -->
 			</div>
 			<!--第6屏-->
 			<div class="swiper-slide slide5">
