--- a/culture.html
+++ b/culture.html
@@ -162,6 +162,10 @@
 	width: 49.8%;
 	position: relative;
 }
+.section4 .item1 .cont{
+	width: 100%;
+	text-align: center;
+}
 .section4 .item-box .bg-img{
 	width: 100%;
 }
@@ -485,7 +489,7 @@
 				<div class="item-box item1">
 					<a href="video/whll.mp4" class="lightbox-image play-box">
 						<img class="bg-img" src="images/culture/4-2.jpg">
-						<div class="my-all-center my-color2" style="margin-top: -60px;font-size:18px">此片献给正在为梦想而奋斗的您</div>
+						<div class="my-all-center my-color2 cont" style="margin-top: -60px;font-size:18px">此片献给正在为梦想而奋斗的您</div>
 						<img class="my-all-center icon-play" src="images/icons/play.png">
 					</a>
 				</div>
