--- a/m/news-detail.html
+++ b/m/news-detail.html
@@ -58,7 +58,7 @@
 	position: relative;
 }
 .content-box1{
-    text-align: center;
+    /* text-align: center; */
 }
 .content-box1 .item-box{
     width: 100%;
