--- a/product-en.html
+++ b/product-en.html
@@ -132,7 +132,7 @@
 					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
 					<div class="content-box">
 						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
-							<a href="product-en.html?item=2"><div class="point-text">整椅</div></a>
+							<a href="product-en.html?item=2"><div class="point-text">Seats</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 								<span class="small-point"></span>
@@ -140,7 +140,7 @@
 							</div>
 						</div>
 						<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
-							<a href="product-en.html?item=5"><div class="point-text">面套</div></a>
+							<a href="product-en.html?item=5"><div class="point-text">Trim</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 									<span class="small-point"></span>
@@ -153,7 +153,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<a href="product-en.html?item=4"><div class="point-text">骨架</div></a>
+							<a href="product-en.html?item=4"><div class="point-text">Frame</div></a>
 						</div>
 						<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
 							<div class="line">
@@ -161,7 +161,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<a href="product-en.html?item=5"><div class="point-text">泡沫</div></a>
+							<a href="product-en.html?item=5"><div class="point-text">Foam</div></a>
 						</div>
 					</div>
 				</div>
@@ -216,8 +216,7 @@
 						<div class="content content1 animated ani-time2" data-my-animate="fadeInDown100">
 							<div class="cont-text">
 									<div class="cont1 my-color3">Frame and Components</div>
-									<div class="cont2 my-color4">通过运行先进材料和先进工艺，达到产品性能提升，实现模块化和平台化
-										策略，提升产品轻量化，致力超越客户多样化的需求。
+									<div class="cont2 my-color4">By applying advanced materials and processes, we can improve product performance, realize modularization, platform, lightweight so as to exceed the diversified needs of customers.
 									</div>
 							</div>
 						</div>
